fix(marquee): fix video distortion on lower screen width

--- a/templates/consonant/blocks/marquee/marquee.css
+++ b/templates/consonant/blocks/marquee/marquee.css
@@ -161,7 +161,7 @@ main .marquee .background video {
     width: 100%;
     height: auto;
     min-height: 100%;
-    object-fit: fill;
+    object-fit: cover;
 }
 
 main .marquee .container {
